<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/loginbackground"
        android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="140dp"
        android:layout_height="71dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="8dp"
        android:text="@string/signUpWelcomeMessage"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signUpNameHint"
            android:backgroundTint="@android:color/transparent"
            android:padding="15dp"
            android:inputType="textPersonName"
            android:layout_marginStart="30dp"
            android:textColorHint="#797979"
            android:textColor="#292929"
            android:autofillHints="" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="4dp"
            android:background="#494949"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signUpEmailHint"
            android:backgroundTint="@android:color/transparent"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:layout_marginStart="30dp"
            android:textColorHint="#797979"
            android:textColor="#292929"
            android:autofillHints="email" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="4dp"
            android:background="#494949"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signUpPasswordHint"
            android:backgroundTint="@android:color/transparent"
            android:padding="15dp"
            android:inputType="textPassword"
            android:layout_marginStart="30dp"
            android:textColorHint="#797979"
            android:textColor="#292929"
            android:autofillHints="password" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="4dp"
            android:background="#494949"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabCustomSize="80dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_arrow_forward_black_24dp"
                android:tint="@android:color/white"
                android:backgroundTint="#4E525B"
                app:elevation="0dp"
                android:elevation="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="30dp"
                android:layout_centerInParent="true"
                tools:ignore="RelativeOverlap" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUpText"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#191919"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signInText"
                android:onClick="OpenLoginPage"
                android:textStyle="bold"
                android:textSize="18sp"
                android:padding="15dp"
                android:layout_marginStart="30dp"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"/>
        </RelativeLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>